--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -23,6 +23,7 @@
             <tr>
               <th scope="col">Short URL ID</th>
               <th scope="col">Long URL</th>
+              <th scope="col">Actions</th>
             </tr>
           </thead>
           <tbody>
@@ -30,6 +31,10 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td>
+                <form method="POST" action="/urls/<%= id %>/delete">
+                  <button type="submit" class="'btn btn-danger">Delete</button>
+                </form>
             </tr>
             <% } %>
           </tbody>
