--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -24,6 +24,7 @@
               <th scope="col">Short URL ID</th>
               <th scope="col">Long URL</th>
               <th scope="col">Actions</th>
+              <th scope="col">Edit</th>
             </tr>
           </thead>
           <tbody>
@@ -35,6 +36,10 @@
                 <form method="POST" action="/urls/<%= id %>/delete">
                   <button type="submit" class="'btn btn-danger">Delete</button>
                 </form>
+              </td>
+              <td>
+                <a href="/urls/<%= id %>" class="btn btn-primary">Edit</a>
+              </td>
             </tr>
             <% } %>
           </tbody>
