--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -24,5 +24,8 @@
       </div>
       <button type="submit" class="btn btn-primary mb-2">Login</button>
     </form>
+    <div class="navbar-text">
+      Hello, <%= username %>!
+    </div>
   </nav>
 </header>
