--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,15 +1,8 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -18,14 +11,20 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <form class="form-inline" method="POST" action="/login">
-      <div class="form-group mx-sm-3 mb-2">
-        <input type="text" class="form-control" name="username" placeholder="Username" required>
+    <% if (username) { %>
+      <div class="navbar-text">
+        Welcome, <%= username %>!
       </div>
-      <button type="submit" class="btn btn-primary mb-2">Login</button>
-    </form>
-    <div class="navbar-text">
-      Hello, <%= username %>!
-    </div>
+      <form class="form-inline" method="POST" action="/logout">
+        <button type="submit" class="btn btn-primary mb-2">Logout</button>
+      </form>
+      <% } else { %>
+        <form class="form-inline" method="POST" action="/login">
+          <div class="form-group mx-sm-3 mb-2">
+            <input type="text" class="form-control" name="username" placeholder="Username" required>
+          </div>
+          <button type="submit" class="btn btn-primary mb-2">Login</button>
+        </form>
+        <% } %>
   </nav>
 </header>
