--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,19 +12,14 @@
       </div>
     </div>
     <% if (user) { %>
-      <div class="navbar-text">
-        Welcome, <%= user.email %>!
-      </div>
       <form class="form-inline" method="POST" action="/logout">
         <button type="submit" class="btn btn-primary mb-2">Logout</button>
       </form>
     <% } else { %>
-      <form class="form-inline" method="POST" action="/login">
-        <div class="form-group mx-sm-3 mb-2">
-          <input type="text" class="form-control" name="username" placeholder="Username" required>
-        </div>
-        <button type="submit" class="btn btn-primary mb-2">Login</button>
-      </form>
+      <div>
+        <a class="nav-item nav-link" href="/register">Register</a>
+        <a class="nav-item nav-link" href="/login">Login</a>
+      </div>
     <% } %>
   </nav>
 </header>
