--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,18 +15,18 @@
 
   <body>
     <%- include('partials/_header') %>
-    <div class= "container">
+    <div class="container">
       <h3>Register</h3>
       <form method="POST" action="/register">
-        <div class=" "form-group">
-        <label>Email</label>
-        <input type="email" name="email">
-      </div>
-      <div class=" form-group">
-        <label>Password</label>
-        <input type="password" name="password">
-      </div>
-      <button type="submit" class="btn btn-primary">Register</button>
+        <div class="form-group">
+          <label>Email</label>
+          <input type="email" name="email" class="form-control" required>
+        </div>
+        <div class="form-group">
+          <label>Password</label>
+          <input type="password" name="password" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
       </form>
     </div>
     <!-- Bootstrap JS -->
